--- a/playbook.yaml
+++ b/playbook.yaml
@@ -2,185 +2,9 @@
 - hosts: all
   become: yes
 
-  # назначение переменных
-  vars:
-    activemq_port: "80"
-    memory_usage: "61"
-    store_usage: "115 gb"
-    temp_usage: "48 gb"
-    load_link: "http://archive.apache.org/dist/activemq/5.16.3/apache-activemq-5.16.3-bin.tar.gz"
-    load_to_file: "/tmp/pack.tar.gz"
-    unpack_to: "/tmp"
-    unpacked_activemq: "/tmp/apache-activemq-5.16.3"
-    java_home: "/usr/lib/jvm/java-1.8.0/"
-    jre_home: "/usr/lib/jvm/java-1.8.0/jre/"
-
   
-  # задачи
-  tasks:
-
-    # проверка наличия файла конфигурации старого сервиса activemq
-    - name: Check if the service file exists
-      stat:
-        path: /usr/lib/systemd/system/activemq.service
-      register: service_file
-
-    # проверка существует ли папка с текущим activemq
-    - name: Check if opt_activemq folder exists
-      stat:
-        path: "/opt/activemq"
-      register: opt_activemq_folder
-
-    # проверка существует ли папка с распакованным activemq в папке /tmp
-    - name: Check if apache-activemq-5.16.3 folder exists
-      stat:
-        path: "{{ unpacked_activemq }}"
-      register: unpack_folder
-
-    # проверка существует ли скачанный архив activemq в папке /tmp
-    - name: Check if loaded archive exists
-      stat:
-        path: "{{ load_to_file }}"
-      register: archive_file
-
-    # удаление папки apache-activemq-5.16.3 из папки /tmp, если она существует
-    - name: Remove apache-activemq-5.16.3 folder
-      file:
-        path: "{{ unpacked_activemq }}"
-        state: absent
-      when: unpack_folder.stat.exists
-
-    # удаление архива activemq из папки /tmp, если он существует
-    - name: Remove archive
-      file:
-        path: "{{ load_to_file }}"
-        state: absent
-      when: archive_file.stat.exists
-
-    # скачивание apache-activemq-5.16.3 в папку /tmp
-    - name: Load ActiveMQ
-      get_url:
-        url: "{{ load_link }}"
-        dest: "{{ load_to_file }}"
-
-    # распаковывание архива в папку /tmp
-    - name: Extract archive
-      unarchive:
-        src: "{{ load_to_file }}"
-        dest: "{{ unpack_to }}"
-        remote_src: yes
-
-    # удаляем скачанный архив из папки /tmp
-    - name: Remove archive
-      file:
-        path: "{{ load_to_file }}"
-        state: absent
-
-    # устанавка java
-    - name: Install OpenJDK
-      yum:
-        name: java-1.8.0-openjdk-devel
-        state: latest
-
-    # создание environment variable JAVA_HOME
-    - name: Export variable JAVA_HOME
-      lineinfile:
-        dest: /etc/profile
-        regexp: '^export JAVA_HOME'
-        line: 'export JAVA_HOME="{{ java_home }}"'
-        state: present
-
-    # создание environment variable JRE_HOME
-    - name: Export variable JRE_HOME
-      lineinfile:
-        dest: /etc/profile
-        regexp: '^export JRE_HOME'
-        line: 'export JRE_HOME="{{ jre_home }}"'
-        state: present
-
-    # остановка сервиса activemq, если он существует
-    - name: Stop old activemq.service
-      service:
-        name: activemq
-        state: stopped
-        enabled: no
-      when: service_file.stat.exists
-
-    # удаление старой папки activemq из папки /opt, если она существует
-    - name: Remove /opt/activemq folder
-      file:
-        path: "/opt/activemq"
-        state: absent
-      when: opt_activemq_folder.stat.exists
-
-    # перемещение распакованного activemq в папку /opt
-    - name: Move move unpacked folder
-      shell: "mv {{ unpacked_activemq }} /opt/activemq"
-
-    # назначение прав на файлы activemq только для root
-    - name: Change owner for activemq folder
-      file:
-        dest: /opt/activemq
-        owner: root
-        group: root
-        mode: 0644
-        recurse: yes
-
-    # разрешение запуска исполняемого файла activemq
-    - name: Allow bin execution
-      file:
-        dest: /opt/activemq/bin/activemq
-        mode: a+x
-      
-    # замена activemq.xml из шаблона с учётом переменных
-    - name: Replace activemq.xml
-      template:
-        src: templates/activemq.xml.j2
-        dest: /opt/activemq/conf/activemq.xml
-        owner: root
-        mode: 0644
-      
-    # замена jetty.xml из шаблона с учётом переменных
-    - name: Replace jetty.xml
-      template:
-        src: templates/jetty.xml.j2
-        dest: /opt/activemq/conf/jetty.xml
-        owner: root
-        mode: 0644
-
-    # удаление старой конфигурации сервиса, если она существует
-    - name: Remove old activemq.service
-      file:
-        path: /usr/lib/systemd/system/activemq.service
-        state: absent
-      when: service_file.stat.exists
-      # вызов обработчика для перезапуска systemctl
-      notify:
-        - restart_systemctl
-      
-    # добавление новой конфигурации сервиса
-    - name: Adding new activemq.service
-      template:
-        src: templates/activemq.service.j2
-        dest: /usr/lib/systemd/system//activemq.service
-        owner: root
-        mode: 0644
-      # вызов обработчика для перезапуска systemctl
-      notify:
-        - restart_systemctl
-
-    # сервиса activemq и разрешение автозапуска при загрузке
-    - name: Run a new service and set autorun on boot
-      systemd:
-        name: activemq
-        state: restarted
-        enabled: yes
+  # подключение созданной роли
+  roles:
+    - role: activemq
 
 
-  # обработчики
-  handlers:
-    # обработчик для перезапуска systemctl (помогает системе узнать об обновлении сервисов)
-    - name: restart_systemctl
-      shell: 
-        cmd: "systemctl daemon-reload && systemctl reset-failed"
-        chdir: /usr/lib/systemd/system/
