--- a/playbook.yaml
+++ b/playbook.yaml
@@ -4,31 +4,47 @@
 
   # назначение переменных
   vars:
-    activemq_port: "80"
-    memory_usage: "61"
+    # пользователь для запуска задач
+    activemq_user: "activemq"
+    # папка для установки activemq
+    activemq_folder: "/opt/activemq"
+    # порт activemq
+    activemq_port: "8161"
+    # memoryUsage
+    memory_usage: "{{ ( ansible_memory_mb.real.total * 0.5 ) | int }} mb"
+    # storeUsage
     store_usage: "115 gb"
+    # tempUsage
     temp_usage: "48 gb"
+    # ссылка для получения архива с activemq
     load_link: "http://archive.apache.org/dist/activemq/5.16.3/apache-activemq-5.16.3-bin.tar.gz"
+    # путь скачивания архива с activemq
     load_to_file: "/tmp/pack.tar.gz"
-    unpack_to: "/tmp"
-    unpacked_activemq: "/tmp/apache-activemq-5.16.3"
+    # временная папка
+    temp_folder: "/tmp"
+    # путь к распакованному во временной папке activemq
+    unpacked_activemq: "{{ temp_folder }}/apache-activemq-5.16.3"
+    # путь для environment JAVA_HOME
     java_home: "/usr/lib/jvm/java-1.8.0/"
+    # путь для environment JRE_HOME
     jre_home: "/usr/lib/jvm/java-1.8.0/jre/"
+    # путь к файлу конфигурации сервиса
+    service_file: "/usr/lib/systemd/system/activemq.service"
 
-  
+
   # задачи
   tasks:
 
     # проверка наличия файла конфигурации старого сервиса activemq
     - name: Check if the service file exists
       stat:
-        path: /usr/lib/systemd/system/activemq.service
-      register: service_file
+        path: "{{ service_file }}"
+      register: srv_file
 
     # проверка существует ли папка с текущим activemq
     - name: Check if opt_activemq folder exists
       stat:
-        path: "/opt/activemq"
+        path: "{{ activemq_folder }}"
       register: opt_activemq_folder
 
     # проверка существует ли папка с распакованным activemq в папке /tmp
@@ -67,7 +83,7 @@
     - name: Extract archive
       unarchive:
         src: "{{ load_to_file }}"
-        dest: "{{ unpack_to }}"
+        dest: "{{ temp_folder }}"
         remote_src: yes
 
     # удаляем скачанный архив из папки /tmp
@@ -97,6 +113,27 @@
         regexp: '^export JRE_HOME'
         line: 'export JRE_HOME="{{ jre_home }}"'
         state: present
+    
+    # создание группы для пользователя, если используется не root
+    - name: Create group for user
+      group:
+        name: "{{ activemq_user }}"
+        system: yes
+        state: present
+      register: created_group
+      when: 'activemq_user != "root"'
+    
+    # создание пользователя, если используется не root
+    - name: Create user
+
+      user:
+        name: "{{ activemq_user }}"
+        group: "{{ activemq_user }}"
+        system: yes
+        create_home: False
+        state: present
+      register: created_user
+      when: 'activemq_user != "root"'
 
     # остановка сервиса activemq, если он существует
     - name: Stop old activemq.service
@@ -104,56 +141,61 @@
         name: activemq
         state: stopped
         enabled: no
-      when: service_file.stat.exists
+      when: srv_file.stat.exists
+      # вызов обработчика для перезапуска systemctl
+      notify:
+        - restart_systemctl
 
     # удаление старой папки activemq из папки /opt, если она существует
-    - name: Remove /opt/activemq folder
+    - name: Remove {{ activemq_folder }} folder
       file:
-        path: "/opt/activemq"
+        path: "{{ activemq_folder }}"
         state: absent
       when: opt_activemq_folder.stat.exists
 
     # перемещение распакованного activemq в папку /opt
     - name: Move move unpacked folder
-      shell: "mv {{ unpacked_activemq }} /opt/activemq"
+      shell: "mv {{ unpacked_activemq }} {{ activemq_folder }}"
 
-    # назначение прав на файлы activemq только для root
+    # назначение прав на файлы activemq только для user
     - name: Change owner for activemq folder
       file:
-        dest: /opt/activemq
-        owner: root
-        group: root
-        mode: 0644
+        dest: "{{ activemq_folder }}"
+        owner: "{{ activemq_user }}"
+        group: "{{ activemq_user }}"
+        mode: 0774
         recurse: yes
 
     # разрешение запуска исполняемого файла activemq
-    - name: Allow bin execution
+    - name: Allow binary execution
       file:
-        dest: /opt/activemq/bin/activemq
+        dest: "{{ activemq_folder }}/bin/activemq"
         mode: a+x
       
     # замена activemq.xml из шаблона с учётом переменных
     - name: Replace activemq.xml
       template:
         src: templates/activemq.xml.j2
-        dest: /opt/activemq/conf/activemq.xml
-        owner: root
-        mode: 0644
+        dest: "{{ activemq_folder }}/conf/activemq.xml"
+        owner: "{{ activemq_user }}"
+        group: "{{ activemq_user }}"
+        mode: 0774
       
     # замена jetty.xml из шаблона с учётом переменных
     - name: Replace jetty.xml
       template:
         src: templates/jetty.xml.j2
-        dest: /opt/activemq/conf/jetty.xml
-        owner: root
-        mode: 0644
+        dest: "{{ activemq_folder }}/conf/jetty.xml"
+        owner: "{{ activemq_user }}"
+        group: "{{ activemq_user }}"
+        mode: 0774
 
     # удаление старой конфигурации сервиса, если она существует
     - name: Remove old activemq.service
       file:
-        path: /usr/lib/systemd/system/activemq.service
+        path: "{{ service_file }}"
         state: absent
-      when: service_file.stat.exists
+      when: srv_file.stat.exists
       # вызов обработчика для перезапуска systemctl
       notify:
         - restart_systemctl
@@ -162,8 +204,8 @@
     - name: Adding new activemq.service
       template:
         src: templates/activemq.service.j2
-        dest: /usr/lib/systemd/system//activemq.service
-        owner: root
+        dest: "{{ service_file }}"
+        owner: "root"
         mode: 0644
       # вызов обработчика для перезапуска systemctl
       notify:
